frontend/styles/index.css
@import "variables.css";
@import "fonts/fonts.css";

/* Import the base Shoelace stylesheet: */
@import "@shoelace-style/shoelace/dist/themes/dark.css";

:root {
  --body-background: #292828;
  --body-color: #f2f2f2;
  --heading-color: black;
  --action-color: #e3a54c;
  --action-color-rgb: 227,165,76;
  --secondary-text-color: #9a9a9a;
}

body {
  background-color: var(--body-background);
  color: var(--body-color);
  min-height: 100vh;
  font-family: "Poppins", sans-serif;
  margin: 0;
  font-size: 108%;
  line-height: 1.5;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

a {
  color: var(--action-color);
  text-decoration: none;
}

h1 {
  margin: 1rem 0 3rem;
  text-align: center;
  font-weight: 900;
  font-size: 2.5rem;
  color: var(--heading-color);
  line-height: 1.2;
}

/* Navbar */

.navbar {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 20px;
}

.navbar img {
  width: 60px;
  margin-bottom: 10px;
}

.navbar > h5 {
  margin: 0;
  letter-spacing: 2px;
  font-size: 1rem;
  font-weight: 700;
}

.tagline {
  margin: 3px 0;
  color: var(--secondary-text-color);
  font-weight: 200;
  letter-spacing: 1px;
  font-size: 1rem;
}

.main-nav ul {
  margin: 10px 0 15px;
  padding: 0;
  list-style-type: none;
  display: flex;
  justify-content: center;
  gap: 1.5rem;
  font-size: 0.875rem;
  font-weight: normal;
  letter-spacing: 1px;
}

.main-nav a {
  text-decoration: none;
  color: var(--body-color);
}

.main-nav a:hover {
  text-decoration: underline;
  text-decoration-color: var(--action-color);
}

/* Home */
#list-posts {
  padding: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  margin: 0;
  max-width: 800px;
}

#list-posts > li {
  list-style: none;
}

.pagination {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin: 0;
  padding: 0;
  width: 100%;
}

.pagination li {
  list-style: none;
  font-size: 0.875rem;
  font-weight: 800;
}


/* Post Card */
.post-card::part(base) {
  background-color: var(--body-background);
  border-width: 1px;
  border-style: solid;
  border-color: rgba(var(--action-color-rgb), 0.3);
  border-radius: 6px;
  width: 100%;
  color: var(--body-color);
  padding: 20px;
  box-shadow: 4px 4px 8px 2px rgba(10,10,10, 0.2)
}

.post-card::part(header) {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  margin-bottom: 20px;
  text-align: center;
}

.post-card_date {
  font-size: 0.875rem;
  font-weight: 200;
  color: var(--secondary-text-color);
  margin: 0;
  letter-spacing: 1px;
}

.post-card_header > h4 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: 700;
  letter-spacing: 1px;
}

.post-card > article {
  font-size: 1rem;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  flex: 1;
  margin: 10px auto 4rem;
  padding: 0;
  width: 100%;
  min-height: calc(100vh - 400px);
  border-radius: 3px;

  @media (max-width: 500px) {
    width: 90%;
  }
}

footer {
  text-align: center;
  margin-bottom: 2rem;
  font-size: 0.875rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
}

footer p {
  margin: 0;
}

footer a {
  text-decoration: none;
}

footer a:hover {
  text-decoration: underline;
  text-decoration-color: var(--action-color);
}

.social-media {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 15px;
}

.social-media img {
  fill: var(--body-color);
}

.copyright {
  font-size: 0.75rem;
}

hr {
  border: none;
  border-top: 2px dotted #bbb;
  margin: 3rem 0;
}

/* Post page */
article {
  line-height: 1.8;
}

.post {
  margin: 20px auto;
  width: 80%;
  color: var(--body-color);
}

.post h1 {
  color: var(--body-color);
  font-weight: 700;
}

.post .published_at {
  color: var(--secondary-text-color);
  font-weight: 200;
}

blockquote {
  color: var(--secondary-text-color);
  font-weight: 200;
  border-left: 5px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.425em 10px;
}

blockquote > p {
  margin: 0;
}

